--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.27",
+    "@fortawesome/free-solid-svg-icons": "^5.12.1",
+    "@fortawesome/react-native-fontawesome": "^0.2.2",
     "@ionic/react": "^5.0.2",
     "@material-ui/core": "^4.9.4",
     "@material-ui/icons": "^4.9.1",
@@ -19,17 +22,20 @@
     "native-base": "^2.13.8",
     "react": "16.9.0",
     "react-dom": "^16.12.0",
-    "react-native": "0.61.5",
+    "react-native": "^0.61.5",
+    "react-native-cli": "^2.0.1",
     "react-native-elements": "^1.2.7",
     "react-native-image-picker": "^2.3.1",
     "react-native-material-ui": "^1.30.1",
     "react-native-modal-datetime-picker": "^8.5.1",
     "react-native-paper": "^3.6.0",
+    "react-native-svg": "^11.0.1",
     "react-native-textinput-effects": "^0.5.1",
     "react-native-vector-icons": "^6.6.0",
     "react-navigation": "^4.2.1",
     "react-navigation-material-bottom-tabs": "^2.2.1",
-    "react-router-native": "^5.1.2"
+    "react-router-native": "^5.1.2",
+    "yarn": "^1.22.0"
   },
   "devDependencies": {
     "@babel/core": "^7.8.4",
