--- a/ios/Podfile
+++ b/ios/Podfile
@@ -38,6 +38,8 @@ target 'saudi_vibes' do
 
   pod 'react-native-image-picker', :path => '../node_modules/react-native-image-picker'
 
+  pod 'react-native-date-picker', :path => '../node_modules/react-native-date-picker'
+
   target 'saudi_vibesTests' do
     inherit! :search_paths
     # Pods for testing
