--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.27",
+    "@fortawesome/free-regular-svg-icons": "^5.12.1",
     "@fortawesome/free-solid-svg-icons": "^5.12.1",
     "@fortawesome/react-native-fontawesome": "^0.2.2",
     "@ionic/react": "^5.0.2",
     "@material-ui/core": "^4.9.4",
     "@material-ui/icons": "^4.9.1",
+    "@react-native-community/datetimepicker": "^2.2.3",
     "axios": "^0.19.2",
     "firebase": "^7.9.1",
     "indicative": "^7.4.4",
@@ -24,13 +26,19 @@
     "react-dom": "^16.12.0",
     "react-native": "^0.61.5",
     "react-native-cli": "^2.0.1",
+    "react-native-date-picker": "^2.7.8",
+    "react-native-datepicker": "^1.7.2",
     "react-native-elements": "^1.2.7",
+    "react-native-fontawesome": "^7.0.0",
     "react-native-image-picker": "^2.3.1",
+    "react-native-material-dropdown": "^0.11.1",
     "react-native-material-ui": "^1.30.1",
     "react-native-modal-datetime-picker": "^8.5.1",
     "react-native-paper": "^3.6.0",
+    "react-native-simple-radio-button": "^2.7.4",
     "react-native-svg": "^11.0.1",
     "react-native-textinput-effects": "^0.5.1",
+    "react-native-ui-xg": "0.0.6",
     "react-native-vector-icons": "^6.6.0",
     "react-navigation": "^4.2.1",
     "react-navigation-material-bottom-tabs": "^2.2.1",
