--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.27",
     "@fortawesome/free-regular-svg-icons": "^5.12.1",
     "@fortawesome/free-solid-svg-icons": "^5.12.1",
-    "@fortawesome/react-native-fontawesome": "^0.2.2",
+    "@fortawesome/react-native-fontawesome": "^0.2.3",
     "@ionic/react": "^5.0.2",
     "@material-ui/core": "^4.9.4",
     "@material-ui/icons": "^4.9.1",
@@ -42,6 +42,8 @@
     "react-native-vector-icons": "^6.6.0",
     "react-navigation": "^4.2.1",
     "react-navigation-material-bottom-tabs": "^2.2.1",
+    "react-router": "^5.1.2",
+    "react-router-dom": "^5.1.2",
     "react-router-native": "^5.1.2",
     "yarn": "^1.22.0"
   },
