--- a/package.json
+++ b/package.json
@@ -25,12 +25,15 @@
     "react": "16.9.0",
     "react-dom": "^16.12.0",
     "react-native": "^0.61.5",
+    "react-native-chatbot": "0.0.1-alpha.12",
     "react-native-cli": "^2.0.1",
     "react-native-date-picker": "^2.7.8",
     "react-native-datepicker": "^1.7.2",
+    "react-native-dialogflow": "^3.2.2",
     "react-native-elements": "^1.2.7",
     "react-native-flexi-radio-button": "^0.2.2",
     "react-native-fontawesome": "^7.0.0",
+    "react-native-gifted-chat": "^0.13.0",
     "react-native-image-picker": "^2.3.1",
     "react-native-material-dropdown": "^0.11.1",
     "react-native-material-ui": "^1.30.1",
@@ -40,11 +43,13 @@
     "react-native-textinput-effects": "^0.5.1",
     "react-native-ui-xg": "0.0.6",
     "react-native-vector-icons": "^6.6.0",
+    "react-native-voice": "^0.3.0",
     "react-navigation": "^4.2.1",
     "react-navigation-material-bottom-tabs": "^2.2.1",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
     "react-router-native": "^5.1.2",
+    "styled-components": "^5.0.1",
     "yarn": "^1.22.0"
   },
   "devDependencies": {
