before install blob

--- a/ios/Podfile
+++ b/ios/Podfile
@@ -38,7 +38,8 @@ target 'saudi_vibes' do
 
 
 
-  pod 'react-native-dialogflow', :path => '../node_modules/react-native-dialogflow'
+
+  # pod 'RNImageCropPicker', :path => '../node_modules/react-native-image-crop-picker'
 
   target 'saudi_vibesTests' do
     inherit! :search_paths
