--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@material-ui/icons": "^4.9.1",
     "@react-native-community/datetimepicker": "^2.2.3",
     "axios": "^0.19.2",
+    "base-64": "^0.1.0",
     "firebase": "^7.10.0",
     "indicative": "^7.4.4",
     "native-base": "^2.13.8",
@@ -34,6 +35,7 @@
     "react-native-flexi-radio-button": "^0.2.2",
     "react-native-fontawesome": "^7.0.0",
     "react-native-gifted-chat": "^0.13.0",
+    "react-native-image-crop-picker": "^0.28.0",
     "react-native-image-picker": "^2.3.1",
     "react-native-material-dropdown": "^0.11.1",
     "react-native-material-ui": "^1.30.1",
@@ -50,6 +52,7 @@
     "react-router-dom": "^5.1.2",
     "react-router-native": "^5.1.2",
     "styled-components": "^5.0.1",
+    "uuid": "^7.0.2",
     "yarn": "^1.22.0"
   },
   "devDependencies": {
