--- a/ios/Podfile
+++ b/ios/Podfile
@@ -41,6 +41,8 @@ target 'saudi_vibes' do
 
   # pod 'RNImageCropPicker', :path => '../node_modules/react-native-image-crop-picker'
 
+  pod 'rn-fetch-blob', :path => '../node_modules/rn-fetch-blob'
+
   target 'saudi_vibesTests' do
     inherit! :search_paths
     # Pods for testing
