--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
     "react-router-native": "^5.1.2",
+    "rn-fetch-blob": "^0.12.0",
     "styled-components": "^5.0.1",
     "uuid": "^7.0.2",
     "yarn": "^1.22.0"
