--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react": "16.9.0",
     "react-dom": "^16.12.0",
     "react-native": "^0.61.5",
+    "react-native-animated-header": "^1.0.7",
     "react-native-chatbot": "0.0.1-alpha.12",
     "react-native-cli": "^2.0.1",
     "react-native-date-picker": "^2.7.8",
@@ -40,7 +41,6 @@
     "react-native-material-dropdown": "^0.11.1",
     "react-native-material-ui": "^1.30.1",
     "react-native-modal-datetime-picker": "^8.5.1",
-    "react-native-paper": "^3.6.0",
     "react-native-svg": "^11.0.1",
     "react-native-textinput-effects": "^0.5.1",
     "react-native-ui-xg": "0.0.6",
