--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-native-elements": "^1.2.7",
     "react-native-flexi-radio-button": "^0.2.2",
     "react-native-fontawesome": "^7.0.0",
+    "react-native-get-random-values": "^1.3.1",
     "react-native-gifted-chat": "^0.13.0",
     "react-native-image-crop-picker": "^0.28.0",
     "react-native-image-picker": "^2.3.1",
@@ -46,6 +47,7 @@
     "react-native-ui-xg": "0.0.6",
     "react-native-vector-icons": "^6.6.0",
     "react-native-voice": "^0.3.0",
+    "react-native-webview": "^9.2.1",
     "react-navigation": "^4.2.1",
     "react-navigation-material-bottom-tabs": "^2.2.1",
     "react-router": "^5.1.2",
